The following changes have been made between John 1.8.0 and 1.8.0.8:

* 3x interleaving for bcrypt on x86-64, except in AVX-enabled builds.
Provides significant speedup on Core 2 CPUs.
* Recognize the $2b$ bcrypt prefix.
* In the generic crypt(3) format, detect descrypt with valid vs. invalid salts
as separate id's for our heuristics on supported hash types.
* Introduced a number of optimizations for faster handling of large password
hash files, including loading, cracking, and "--show".  Some of these use more
memory than before, yet in a more efficient manner.
* Dropped undocumented special handling of "Mc" in 'c' and 'C' rule commands.
* Implemented special-case handling of repeated rule commands '$', '^', '[',
']', '{', and '}', as well as faster handling of the 'D' command.
* When built with "--fork" support, disallow session names with all-digit
suffixes since these clash with those produced by "--fork".
* Forward SIGTERM to --fork'ed children.
* Set stdout to line buffered (rather than potentially fully buffered), except
for "--stdout", "--show", and auxiliary programs such as "unshadow".
* On Windows, restore normal processing of Ctrl-C in case our parent (such as
Johnny the GUI) had disabled it.
* Added linux-mic make target for Intel MIC (first generation Xeon Phi, aka
Knights Corner), along with use of 512-bit SIMD intrinsics for bitslice DES.
* Added linux-arm32le and linux-arm32le-neon make targets (the latter makes use
of NEON for bitslice DES).
* Made a minor optimization to MMX and SSE2 assembly code for LM hash.
* Dropped Ultrix and SCO support.
* Fixed an out of bounds write bug in the external mode virtual machine.
* Fixed a bug where unaligned access SSE/AVX instructions would unnecessarily
be generated by GCC 4.6+ in the bitslice DES code in non-OpenMP builds.
* Fixed a bug where "Warning: no OpenMP support for this hash type" could be
printed in "--stdout" mode.
* Made assorted other bugfixes, portability and documentation enhancements.
