@@ -1,4 +1,4 @@
-The following changes have been made between John 1.8.0 and 1.8.0.8:
+The following changes have been made between John 1.8.0 and 1.8.0.9:
 
 * 3x interleaving for bcrypt on x86-64, except in AVX-enabled builds.
 Provides significant speedup on Core 2 CPUs.
@@ -24,6 +24,8 @@ Knights Corner), along with use of 512-bit SIMD intrinsics for bitslice DES.
 of NEON for bitslice DES).
 * Made a minor optimization to MMX and SSE2 assembly code for LM hash.
 * Dropped Ultrix and SCO support.
+* Fixed a bug introduced in version 1.7.4 in the wordlist rules engine, where
+some sequences of rule commands could overflow a word buffer.
 * Fixed an out of bounds write bug in the external mode virtual machine.
 * Fixed a bug where unaligned access SSE/AVX instructions would unnecessarily
 be generated by GCC 4.6+ in the bitslice DES code in non-OpenMP builds.
@@ -361,4 +363,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.101 2016/05/31 07:32:44 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.102 2016/07/08 13:38:26 solar Exp $
